--- a/app/design/frontend/creo/default/template/pdp/action/instagramPhotos.phtml
+++ b/app/design/frontend/creo/default/template/pdp/action/instagramPhotos.phtml
@@ -1,7 +1,9 @@
 <?php if(Mage::getStoreConfig('pdp/customer_action/is_instagram')){ ?>
 <?php $js_pdp = Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_JS).'pdp/'; ?>
+<?php if (!$this->isAdminUser()) { ?>
 <script type="text/javascript" src="<?php echo $js_pdp;?>instagram/instagram_connect.js"></script>
 <link href="<?php echo $js_pdp;?>instagram/css/ins.css" rel="stylesheet" type="text/css" />
+<?php } ?>
 <input type="hidden" id="pdc_ins_api" value="<?php echo Mage::getStoreConfig('pdp/customer_action/instagram_api') ?>" />
 <input type="hidden" id="pdc_ins_key" value="<?php echo Mage::getStoreConfig('pdp/customer_action/instagram_key') ?>" />
 <input type="hidden" id="pdc_ins_redirect_url" value="<?php echo $js_pdp ?>instagram/redirect.php" />
@@ -17,8 +19,8 @@
             <div rel="pdc_ins_myphotos" pdc-ins="ins_block" id="pdc_ins_myphotos"></div>
             <a class="pdp_ins_next no-display" data-nexturl=""><?php echo $this->__('Load More') ?></a>
         </div>
-		<button class="upload_photo_btn fb_photo_btn instagram_btn instagram-signin" type="button"><i class="pdc-instagram"></i><span class="pdc_ins_mes_button"><?php echo $this->__('Login Instagram');?></span></button>
-        <button class="upload_photo_btn fb_photo_btn instagram_btn instagram-signout no-display" type="button"><i class="pdc-instagram"></i><span class="pdc_ins_mes_button"><?php echo $this->__('Logout Instagram');?></span></button>
+		<button class="upload_photo_btn fb_photo_btn instagram_btn instagram-signin btn" type="button"><i class="pdc-instagram"></i><span class="pdc_ins_mes_button"><?php echo $this->__('Login Instagram');?></span></button>
+        <button class="upload_photo_btn fb_photo_btn instagram_btn btn instagram-signout no-display" type="button"><i class="pdc-instagram"></i><span class="pdc_ins_mes_button"><?php echo $this->__('Logout Instagram');?></span></button>
 	  </div>
 	</div>
   </div>
