--- a/app/design/frontend/creo/default/template/pdp/design/itemColors.phtml
+++ b/app/design/frontend/creo/default/template/pdp/design/itemColors.phtml
@@ -20,8 +20,8 @@ if(count($productColors)){
             <?php echo "color_code" . "='" . $side['color_code'] . "'"; ?>
             <?php endforeach; ?>
             style="background: #<?php echo $firstSide['color_code']  ?>"
-            name="<?php echo $this->__("Default")  ?>"
-            data-toggle="tooltip" data-placement="top" data-original-title="<?php echo $this->__("Default")  ?>" >
+            name="<?php echo $this->__("Reset Color Default")  ?>"
+            data-toggle="tooltip" data-placement="top" data-original-title="<?php echo $this->__("Reset Color Default")  ?>" >
             <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
         </li>
         <!---->
