--- a/app/design/adminhtml/default/default/layout/pdp.xml
+++ b/app/design/adminhtml/default/default/layout/pdp.xml
@@ -26,7 +26,7 @@
 	</adminhtml_sales_order_invoice_view>
     <adminhtml_catalog_product_edit>
 		<reference name="head">
-			<action method="addItem"><type>js</type><name>pdp/jquery/jquery-1.10.2.min.js</name></action>
+			<!--<action method="addItem"><type>js</type><name>pdp/jquery/jquery-1.10.2.min.js</name></action>-->
         </reference>
 	</adminhtml_catalog_product_edit>
 	<pdp_adminhtml_group_edit>
