--- a/app/design/frontend/creo/default/template/pdp/action/save.phtml
+++ b/app/design/frontend/creo/default/template/pdp/action/save.phtml
@@ -1,3 +1,6 @@
+<?php 
+$isSkipSaveStep = Mage::getStoreConfig("pdp/design/skip_save_design");
+?>
 <!-- Modal Save Popup -->
 <div class="modal fade" id="savePopup" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog modal-lg">
@@ -22,6 +25,7 @@
 			<div class="col-xs-8">
 				<form class="form-horizontal" method="GET" id="save_design_form" action="<?php echo Mage::helper("pdp")->getPdpBaseUrl() . "pdp/customerdesign/save/" ?>">
                     <input type="hidden" value="filename.json" name="filename" id="customer_design_json"/>
+                    <input type="hidden" value="<?php echo $isSkipSaveStep ?>" id="is_skip_design_step"/>
                     <input type="hidden" value="<?php echo $this->getRequest()->getParam("product-id") ?>" name="product_id" id="customer_design_product_id"/>
 					<fieldset>
 					<!-- Text input-->
