--- a/app/design/frontend/creo/default/template/pdp/action/uploadPhotos.phtml
+++ b/app/design/frontend/creo/default/template/pdp/action/uploadPhotos.phtml
@@ -9,10 +9,47 @@
 	  </div>
 	  <div class="modal-body">
 		<p style="text-align:center;"><?php echo $this->__('By uploading an image you guarantee that you have read these <strong>Terms &amp; Conditions</strong> of Uploading Photos.<br/>And that you agree to abide by all clauses within these <strong>Terms and Conditions</strong>.');?></p>
+        <div class="upload-info well">
+            <?php if($helper->isImagickLoaded()) : ?>
+            <div class="best-result">
+                <h4><?php echo $this->__("For Best Results") ?></h4>
+                <ul class="formats">
+                    <li>.PDF</li>
+                    <li>.AI</li>
+                    <li>.EPS</li>
+                    <li>.PSD</li>
+                </ul>
+                <ul class="tip">
+                    <li>- <?php echo $this->__("Vector Based Post Script .PS, .EPS, or PDF (Recommended)") ?></li>
+                    <li>- <?php echo $this->__("Vector Based Adobe Illustrator Photoshop with pdf option enabled .AI,PSD") ?></li>
+                    <li>- <?php echo $this->__('If using Adobe Illustrator or Photoshop "Save As" a .PDF. Save at 300 dpi') ?></li>
+                    <li>- <?php echo $this->__('Raster PNG with transparent background .PNG') ?></li>
+                </ul>
+            </div>
+            <div class="other-formats">
+                <h4><?php echo $this->__("Other Accepted File Formats") ?></h4>
+                <ul class="formats">
+                    <li>.PNG</li>
+                    <li>.JPG</li>
+                    <li>.BMP</li>
+                    <li>.GIF</li>
+                    <li>.SVG</li>
+                </ul>
+            </div>
+            <?php endif; ?>
+            <!--Upload Message, can add or edit from PDC settings-->
+            <?php if($helper->getUploadNote() != "") : ?>
+            <div id="msg_info">
+                <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+                <?php echo $helper->getUploadNote() ?>
+            </div> 
+            <?php endif; ?>
+        </div>
 		<div class="content_upload nodisplay" pdc-clipart-tab="content_upload">
 			<!--Uploaded Image Here-->
             <?php $customImageInSession = Mage::getSingleton("core/session")->getCustomUploadImages(); ?>
             <div id="lists_img_upload">
+                <input type="hidden" id="delete_image_msg" value="<?php echo $this->__("Are you sure?") ?>"/>
 				<div class="row">
 				<?php if (is_array($customImageInSession) && count($customImageInSession) > 0) : ?>
 					<?php //echo "<pre>"; print_r($customImageInSession); ?>
@@ -23,7 +60,8 @@
 							<div class="caption" style="text-align: center;">
 								<p>
 									<a class="btn btn-default crop-item" role="button"><span class="glyphicon glyphicon-retweet" aria-hidden="true"></span> <?php echo $this->__("Crop") ?></a>
-									<a class="btn btn-default add-to-design" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span> <?php echo $this->__("Add To Design") ?></a>
+									<a class="btn btn-default add-to-design" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span> <?php echo $this->__("Use") ?></a>
+                                    <a class="btn btn-danger delete-upload-image" role="button"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a>
 								</p>
 							</div>
 						</div>
@@ -35,14 +73,9 @@
             <?php $uploadImageAction = Mage::getBaseUrl() . "pdp/upload/uploadCustomImage" ?>
 			<form id="upload_images_form" action="<?php echo $uploadImageAction ?>" method="POST" enctype="multipart/form-data">
                 <input type="hidden" id="pdc_upload_config" value="<?php echo htmlentities($helper->getConfig('JSON')) ?>"/>
+                <input type="hidden" id="unsuported_message" value="<?php echo $helper->getUnsuportedMessage(); ?>"/>
 				<div class="row">
                     <div class="col-sm-12 pdc-message">
-                        <?php if($helper->getUploadNote() != "") : ?>
-                        <div id="msg_info" class="alert alert-info" role="alert">
-                            <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
-                            <?php echo $helper->getUploadNote() ?>
-                        </div> 
-                        <?php endif; ?>
                         <div id="msg_error" class="alert alert-danger hide" role="alert">
                             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                             <span class="message"></span>
@@ -56,7 +89,7 @@
                         <div class="file-upload">
                             <span class="btn btn-md btn-primary btn-file">
                                 <i class="glyphicon glyphicon-file "></i>
-                                <?php echo $this->__('Browse') ?> ... <input type="file" accept="image/*" name="uploads[]" id="fileToUpload" class="upload_photo" />
+                                <?php echo $this->__('Browse File') ?> <input type="file" accept="<?php echo $helper->getFileAccept() ?>" name="uploads[]" id="fileToUpload" class="upload_photo" />
                             </span>
                             <button id="upload_custom_img_btn" class="btn btn-success" type="button" name="upload_custom_img_btn"><?php echo $this->__('Upload') ?></button>
                         </div>
