--- a/app/design/frontend/creo/default/template/pdp/design.phtml
+++ b/app/design/frontend/creo/default/template/pdp/design.phtml
@@ -25,7 +25,7 @@
 </div>
 <input name="pdp_design_string" type="hidden" value="<?php echo htmlentities($jsonString) ?>"/>
 <?php echo $this->getChildHtml('design_top_bar'); // Design Area Topbar (Product Title, Save, Download, Sharing) ?>
-<div class="wrap_pdp_design">
+<div class="wrap_pdp_design pdc_backend">
 	<?php echo $this->getChildHtml('product_side'); // Product Sides ?>
 	<div class="pdc-design-area"> 
 		<div class="pdc-design-area-left">
@@ -62,6 +62,8 @@
 	<link href="<?php echo $js_pdp;?>pdc/css/pdc.css" rel="stylesheet"/>
 	<link href="<?php echo $js_pdp;?>pdc/css/pdc.layer.css" rel="stylesheet"/>
 	<link href="<?php echo $js_pdp;?>pdc/css/iframe.css" rel="stylesheet"/>
+    <link href="<?php echo $js_pdp;?>instagram/css/ins.css" rel="stylesheet" type="text/css" />
+    <link href="<?php echo $js_pdp;?>curvedtext/css/style.css" rel="stylesheet" type="text/css" />
 	<link href="<?php echo $js_pdp;?>jquery/colorpicker/css/colorpicker.css" rel="stylesheet"/>
 	<script src="<?php echo $js_pdp;?>jquery/jquery-1.10.2.min.js"></script>
 	<script src="<?php echo $js_pdp;?>bootstrap/3.3.4/js/bootstrap.min.js"></script>
@@ -70,9 +72,13 @@
 	<script src="<?php echo $js_pdp;?>jquery/mcustomscrollbar/jquery.mcustomscrollbar.min.js"></script>
 	<script src="<?php echo $js_pdp;?>jquery/jcrop/jquery.jcrop.min.js"></script>
 	<script src="<?php echo $js_pdp;?>jquery/ui/jquery-ui.min.js"></script>
-	<script src="<?php echo $js_pdp;?>fabricjs/fabric-1.5.0.min.js"></script>
+	<script src="<?php echo $js_pdp;?>fabricjs/fabric.js"></script>
 	<script src="<?php echo $js_pdp;?>pdc/js/draggabilly.js"></script>
 	<script src="<?php echo $js_pdp;?>jquery/colorpicker/colorpicker.js"></script>
+    <script type="text/javascript" src="<?php echo $js_pdp;?>facebook/facebook_connect.js"></script>
+    <script type="text/javascript" src="<?php echo $js_pdp;?>instagram/instagram_connect.js"></script>
+    <script type="text/javascript" src="<?php echo $js_pdp;?>curvedtext/js/curvedtext.js"></script>
+    <script type="text/javascript" src="<?php echo $js_pdp;?>curvedtext/js/pdc.text.action.js"></script>
 	<?php endif; ?>
 </div>
 
