--- a/app/design/frontend/creo/default/template/pdp/design/topbar.phtml
+++ b/app/design/frontend/creo/default/template/pdp/design/topbar.phtml
@@ -22,7 +22,7 @@ $isAdminUser = $this->isAdminUser();
                     <?php echo $this->__('Remove Sample Design');?></button>
                 <?php endif; ?>
             </li>
-			<li data-toggle="modal" data-target="#downloadPopup_temp"><button pdc-data="pdc-btn" pdc-action="DOWNLOAD" type="button" data-toggle="tooltip" data-placement="top" title="<?php echo $this->__('Download Your Design'); ?>" class=""><i class="pdc-file-download"></i> <?php echo $this->__('Download');?></button></li>
+			<li data-toggle="modal" data-target="#downloadPopup_temp"><button pdc-data="pdc-btn" pdc-action="DOWNLOAD" type="button" data-toggle="tooltip" data-placement="bottom" title="<?php echo $this->__('Download Your Design'); ?>" class=""><i class="pdc-file-download"></i> <?php echo $this->__('Download');?></button></li>
 			<?php if(Mage::getStoreConfig('pdp/customer_action/sharing')){ ?>
 			<li data-toggle="modal" data-target="#sharingPopup_temp"><button pdc-data="pdc-btn" pdc-action="SHARE" type="button" data-toggle="tooltip" data-placement="top" title="<?php echo $this->__('Share Your Design To Social networks'); ?>" class=""><i class="pdc-share"></i> <?php echo $this->__('Share');?></button></li>
 			<?php } ?>
