--- a/skin/frontend/creo/default/custom.css
+++ b/skin/frontend/creo/default/custom.css
@@ -235,6 +235,7 @@
 .product-detail .btn-holder button:first-child {
 	background: #fff none repeat scroll 0 0;
 	border-color: #eee;
+	outline:none !important;
 	border-style: solid;
 	border-width: 0 0 0 4px;
 	color: #aaa;
@@ -254,16 +255,30 @@
 	display: inline-block;
 	transform: skewX(25deg);
 }
-.product-detail .btn-holder button:first-child:hover .span1 {
+.product-detail .btn-holder button:first-child .span1 {
 	background: #000 none repeat scroll 0 0;
 	border-color: #000;
 }
-.product-detail .btn-holder button:first-child:hover {
+
+.product-detail .btn-holder button:first-child:hover .span1 {
+	background: #f16167 none repeat scroll 0 0;
+	border-color: #f16167;
+} 
+
+.product-detail .btn-holder button:first-child {
 	background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
 	border-color: #000;
 	color: #fff;
 	opacity: 1;
 }
+
+.product-detail .btn-holder button:first-child:hover {
+	background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+	border-color: #f16167;
+	color: #000;
+	opacity: 1;
+} 
+
 .product-detail .btn-holder .span2 {
 	font: bold 14px/28px "Roboto Condensed", Helvetica, Arial, sans-serif;
 	text-transform: uppercase;
