--- a/app/design/frontend/creo/default/template/onestepcheckout/onepage/review.phtml
+++ b/app/design/frontend/creo/default/template/onestepcheckout/onepage/review.phtml
@@ -6,7 +6,7 @@
   </div>
   <div id="checkout-review-load"> <?php echo $this->getChildHtml('info') ?> </div>
   
-    <div class="buttons-set" id="review-buttons-container"> 
+    <div class="buttons-set" id="review-buttons-container" style="position:relative"> 
       
       <!-- Heard Us -->
       
@@ -41,6 +41,6 @@
       <!-- Heard Us -->
        
       <button type="submit" title="<?php echo $this->__('Place Order') ?>" class="button btn-checkout" onClick="checkout.save(); return false;"><?php echo $this->__('Place Order') ?></button>
-      <span id="review-please-wait" style="display:none;float:right;"> <img src="<?php echo $this->getSkinUrl('images/onestepcheckout/opc-ajax-loader_onestepcheckout.gif') ?>" alt="<?php echo $this->__('Submitting order information...') ?>" title="<?php echo $this->__('Submitting order information...') ?>" class="v-middle" /> <?php echo $this->__('Submitting order information...') ?> </span> </div>
+      <span id="review-please-wait" style="display:none;float:none;position:absolute;right: 50px;top: -5px;"> <img src="<?php echo $this->getSkinUrl('images/onestepcheckout/opc-ajax-loader_onestepcheckout.gif') ?>" alt="<?php echo $this->__('Submitting order information...') ?>" title="<?php echo $this->__('Submitting order information...') ?>" class="v-middle" /> <?php echo $this->__('Submitting order information...') ?> </span> </div>
   </div>
 </div>
