--- a/skin/frontend/creo/default/custom.css
+++ b/skin/frontend/creo/default/custom.css
@@ -96,18 +96,10 @@
 	text-transform: uppercase;
 }
 .login-form .validation-advice {
-	position: relative;
 	font-size: 10px;
-	top: -14px;
 	text-align: left;
 	color: red;
-}
-.subscribe-form .validation-advice {
-	position: relative;
-	font-size: 10px;
-	top: -14px;
-	text-align: left;
-	color: red;
+	float: left;
 }
 .popuplogin_button:hover, .newslettersubscribe:hover {
 	color: #000;
